Bump checkstyle