@@ -48,10 +48,7 @@ allprojects {
     compileJava {
         sourceCompatibility = javaVersion
         targetCompatibility = javaVersion
-        options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
-        options.compilerArgs.addAll(['--add-exports', 'java.base/java.net=ALL-UNNAMED'])
         options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
-        options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
@@ -59,10 +56,7 @@ allprojects {
     compileTestJava {
         sourceCompatibility = javaVersion
         targetCompatibility = javaVersion
-        options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
-        options.compilerArgs.addAll(['--add-exports', 'java.base/java.net=ALL-UNNAMED'])
         options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
-        options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
@@ -74,7 +68,7 @@ allprojects {
     dependencies {
         implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
         implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'
-        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: '10.3'
+        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: '10.3.1'
         testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
         testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
     }
@@ -83,7 +77,7 @@ allprojects {
         checkstyle {
             configFile = "${rootDir}/config/checks.xml" as File
             configProperties = ["suppressionFile": "${rootDir}/config/suppressions.xml"]
-            toolVersion = '10.3'
+            toolVersion = '10.3.1'
         }
     }
 
